--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -3,119 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="base.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <header>
       <h1>Mohamed Rashid</h1>
-      <p>Lorem ipsum dolor sit amet.</p>
-      <h3>the checker is not working</h3>
-      <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
     </header>
-    <nav>
-      <ul>
-        <li><a href="#">Introduction</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">About Me,</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-    <section id="introduction">
-      <h2>Introduction</h2>
-      <p>I am good. Live is going to be will</p>
-      <h3>project</h3>
-    </section>
-
-    <section id="projects">
-      <h2>Projectss</h2>
-      <h3>project</h3>
-      <p>for the description</p>
-    </section>
-
-    <section id="about">
-      <h2>About Me</h2>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <a href="https://github.com/Rashid0101/My_First_Portfolio" target="_blank"
-        >GitHub
-      </a>
-    </section>
-
-    <article>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem adipisci
-        illum numquam similique? Velit totam tempore praesentium veniam
-        provident ea, eligendi veritatis, nostrum, maiores harum dolore rerum
-        aliquid qui sunt.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem adipisci
-        illum numquam similique? Velit totam tempore praesentium veniam
-        provident ea, eligendi veritatis, nostrum, maiores harum dolore rerum
-        aliquid qui sunt.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem adipisci
-        illum numquam similique? Velit totam tempore praesentium veniam
-        provident ea, eligendi veritatis, nostrum, maiores harum dolore rerum
-        aliquid qui sunt.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem adipisci
-        illum numquam similique? Velit totam tempore praesentium veniam
-        provident ea, eligendi veritatis, nostrum, maiores harum dolore rerum
-        aliquid qui sunt.
-      </p>
-
-      <br />
-      <br />
-      <br />
-      <table border="1">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Country</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>John</td>
-            <td>25</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>Emily</td>
-            <td>28</td>
-            <td>Canada</td>
-          </tr>
-          <tr>
-            <td>Michael</td>
-            <td>32</td>
-            <td>Australia</td>
-          </tr>
-          <tr>
-            <td>Sophia</td>
-            <td>21</td>
-            <td>UK</td>
-          </tr>
-        </tbody>
-      </table>
-    </article>
-
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <a href="tweets.html">tweets</a>
+    <main>
+      <article>
+        <p>
+          Article Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          Aperiam quaerat dolores doloremque, laudantium nulla repellendus?
+        </p>
+      </article>
+      <aside>
+        <p>
+          ASIde Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
+          aliquam.
+        </p>
+      </aside>
+    </main>
 
     <footer>
-      <p>&copy; 2024 Mohamed Rashid.</p>
+      <p>Footer</p>
     </footer>
   </body>
 </html>
