2. Responsive web design

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="works_on_smartphone">
     <header>
       <h1>Mohamed Rashid</h1>
     </header>
