3. Some more styling

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="works_on_smartphone">
     <header>
-      <h1>Mohamed Rashid</h1>
+      <h1>❤Mohamed Rashid❤</h1>
     </header>
     <main>
       <article>
