--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -15,12 +15,20 @@
         <p>
           Article Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           Aperiam quaerat dolores doloremque, laudantium nulla repellendus?
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
+          pariatur voluptatibus quis necessitatibus fugiat reprehenderit
+          eveniet! Nemo, cumque deserunt alias consequatur quam eveniet quasi
+          adipisci porro earum architecto praesentium saepe quas temporibus cum
+          ducimus, qui excepturi corrupti enim magnam sint.
         </p>
       </article>
       <aside>
         <p>
           ASIde Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
-          aliquam.
+          aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Minima sed maiores delectus exercitationem vitae, iste itaque
+          consequatur magni sapiente quidem quae nesciunt qui nisi, modi minus
+          architecto. Mollitia, amet est.
         </p>
       </aside>
     </main>
