--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -3,8 +3,169 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/4a2b055604.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="1-styles.css" />
+    <link rel="stylesheet" href="1-reset.css" />
+    <link rel="stylesheet" href="queries.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="nav">
+        <img src="/headphones/images/logo_headphones.png" alt="icone image" />
+
+        <ul class="nav-ul">
+          <li><a href="#">what we do</a></li>
+          <li><a href="#">our results</a></li>
+          <li><a href="#">contact us</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="section-hero">
+        <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
+        <p class="hero-text">
+          Lorem ipsum dolor set amet lorem ipsum dolor set
+        </p>
+        <a href="/headphones/1-index.html">CALL TO ACTION</a>
+        <p class="hero-artical">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut <br />
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco <br />laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in <br />
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
+      </section>
+
+      <section class="more-info">
+        <h2>What we do…</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut <br />
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco <br />
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+          in reprehenderit in <br />
+          voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+        <div class="more-info-containers">
+          <div class="more-info-container-1">
+            <img src="/headphones/images/sound-frecuency.png" alt="" />
+
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, <br />
+              consectetur adipiscing elit.
+            </p>
+          </div>
+
+          <div class="more-info-container-2">
+            <img src="/headphones/images/video.png" alt="" />
+
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, <br />
+              consectetur adipiscing elit.
+            </p>
+          </div>
+
+          <div class="more-info-container-3">
+            <img src="/headphones/images/music.png" alt="" />
+
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, <br />
+              consectetur adipiscing elit.
+            </p>
+          </div>
+
+          <div class="more-info-container-4">
+            <img src="/headphones/images/hearing.jpg" alt="" />
+
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, <br />
+              consectetur adipiscing elit.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="results">
+        <h2>Our results speak for themselves</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut <br />
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco <br />laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in <br />voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+
+        <div class="results-cube">
+          <div class="results-cube-1">
+            <h4>+2%</h4>
+            <p>Lorem ipsum dolor</p>
+            <img src="/headphones/images/pentagone.png" alt="cube background" />
+          </div>
+
+          <div class="results-cube-1">
+            <h4>+2%</h4>
+            <p>Lorem ipsum dolor</p>
+            <img src="/headphones/images/pentagone.png" alt="cube background" />
+          </div>
+
+          <div class="results-cube-1">
+            <h4>+2%</h4>
+            <p>Lorem ipsum dolor</p>
+            <img src="/headphones/images/pentagone.png" alt="cube background" />
+          </div>
+
+          <div class="results-cube-1">
+            <h4>+2%</h4>
+            <p>Lorem ipsum dolor</p>
+            <img src="/headphones/images/pentagone.png" alt="cube background" />
+          </div>
+        </div>
+      </section>
+
+      <section class="Contact-us">
+        <h3>Contact us</h3>
+        <div class="Contact-us-flex">
+          <form action="">
+            <label for="name"></label>
+            <input type="text" name="name" value="Name" required />
+            <br />
+            <label for="Email"></label>
+            <input type="Email" Email="Email" value="Email" />
+            <br />
+            <label for="Your message"></label>
+            <input type="text" Email="Your message" value="Your message" />
+            <br />
+            <button>CALL TO ACTION</button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <section class="footer-continer">
+        <div class="footer">
+          <img src="/images/logo.png" alt="logo" />
+          <div class="icone-continer">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <p>©smileschool 2020</p>
+      </section>
+    </footer>
+  </body>
 </html>
